[package]
name = "cattp"
version = "0.1.1"
authors = ["Lorenzo Pieri, 404answernotfound <404answernotfound.public@gmail.com>"]
license = "MIT"
description = "A cli tool to understand HTTP codes with cats"
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
webbrowser = "0.8.10"
